--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -120,7 +120,9 @@ jobs:
         tree debian/
         chmod +x debian/usr/bin/KikoPlay
         file debian/usr/bin/KikoPlay
+        command -v ldd
         ldd debian/usr/bin/KikoPlay | grep "not found"
+        command -v desktop-file-validate
         desktop-file-validate debian/usr/share/applications/io.github.KikoPlayProject.KikoPlay.desktop
         ./linuxdeployqt.AppImage debian/usr/share/applications/io.github.KikoPlayProject.KikoPlay.desktop -appimage  -unsupported-bundle-everything -exclude-libs=libqsqlmimer,libmysqlclient,libqsqlmysql,libqsqlpsql,libqsqlodbc,libqtposition_nmea
         if [ "${{ matrix.arch }}" = "amd64" ]; then
