--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -122,10 +122,12 @@ jobs:
         file debian/usr/bin/KikoPlay
         command -v ldd
         command -v grep
-        ldd debian/usr/bin/KikoPlay
         command -v desktop-file-validate
-        desktop-file-validate debian/usr/share/applications/io.github.KikoPlayProject.KikoPlay.desktop
-        ./linuxdeployqt.AppImage debian/usr/share/applications/io.github.KikoPlayProject.KikoPlay.desktop -appimage  -unsupported-bundle-everything -exclude-libs=libqsqlmimer,libmysqlclient,libqsqlmysql,libqsqlpsql,libqsqlodbc,libqtposition_nmea
+        mv debian/usr/share/applications/io.github.KikoPlayProject.KikoPlay.desktop debian/usr/share/applications/KikoPlay.desktop
+        mv debian/usr/share/icons/hicolor/128x128/apps/io.github.KikoPlayProject.KikoPlay.png debian/usr/share/icons/hicolor/128x128/apps/KikoPlay.png
+        sed -i "s/^Icon=.*/Icon=KikoPlay /" debian/usr/share/applications/KikoPlay.desktop
+        desktop-file-validate debian/usr/share/applications/KikoPlay.desktop
+        ./linuxdeployqt.AppImage debian/usr/share/applications/KikoPlay.desktop -appimage  -unsupported-bundle-everything -exclude-libs=libqsqlmimer,libmysqlclient,libqsqlmysql,libqsqlpsql,libqsqlodbc,libqtposition_nmea
         if [ "${{ matrix.arch }}" = "amd64" ]; then
           mv KikoPlay-x86_64.AppImage ../../../kikoplay-${{ matrix.arch }}-full.AppImage
         else
