--- a/.github/workflows/build-package.yml
+++ b/.github/workflows/build-package.yml
@@ -127,7 +127,9 @@ jobs:
         mv debian/usr/share/icons/hicolor/128x128/apps/io.github.KikoPlayProject.KikoPlay.png debian/usr/share/icons/hicolor/128x128/apps/KikoPlay.png
         sed -i "s/^Icon=.*/Icon=KikoPlay /" debian/usr/share/applications/KikoPlay.desktop
         desktop-file-validate debian/usr/share/applications/KikoPlay.desktop
-        ./linuxdeployqt.AppImage debian/usr/share/applications/KikoPlay.desktop -appimage
+        touch debian/usr/share/doc/libc6/copyright
+        tree debian/
+        ./linuxdeployqt.AppImage debian/usr/share/applications/KikoPlay.desktop -appimage -unsupported-allow-new-glibc
         if [ "${{ matrix.arch }}" = "amd64" ]; then
           mv KikoPlay-x86_64.AppImage ../../../kikoplay-${{ matrix.arch }}-full.AppImage
         else
